# rheolab

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  REPORT-UX-OVERHAUL.md  _typos.toml  docker-compose.yml  env.example  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.benchmark.config.ts  playwright.config.ts  playwright.db-scale.config.ts  playwright.full-workflow.tauri.config.ts  playwright.full-workflow.web.config.ts  playwright.tauri-soak.config.ts  playwright.tauri.config.ts  progress.txt  t-12.10.26-3BSL 12.03.2026 1139.data  tsconfig.json  version.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_analysis_pipeline.rs  bench_comparison_pdf.rs
src-tauri/icons/: icon.icns
src-tauri/keys/: license_public.der  updater.key.pub
src-tauri/src/: error.rs  ipc_policy.rs  lib.rs  main.rs  types.rs
src-tauri/src/analysis_cache/: artifact_codec.rs  key.rs  mod.rs
src-tauri/src/commands/: analysis.rs  analysis_tests.rs  fixtures.rs  jobs.rs  logger.rs  mod.rs  reports.rs  sync_engine.rs  window_chrome.rs
src-tauri/src/commands/analysis/: commands.rs  cycle_detection.rs  cycle_processing.rs  dto.rs  mod.rs
src-tauri/src/commands/api_keys/: commands.rs  mod.rs  types.rs
src-tauri/src/commands/backup/: export.rs  manage.rs  mod.rs  restore.rs  restore_tests.rs  validate.rs
src-tauri/src/commands/data_flows/: artifacts.rs  conflicts.rs  helpers.rs  import_batch.rs  mod.rs  search.rs  sync.rs  tests.rs  types.rs
src-tauri/src/commands/experiments/: crud.rs  crud_tests.rs  helpers.rs  helpers_tests.rs  mod.rs  sync.rs  types.rs
src-tauri/src/commands/experiments/export/: export_helpers.rs  mod.rs
src-tauri/src/commands/experiments/list/: dynamic.rs  list_tests.rs  mod.rs  query.rs
src-tauri/src/commands/experiments/list/list_tests/: basic.rs  combat_composite.rs  combat_thresholds.rs  dynamic_threshold.rs  fixtures.rs  mod.rs  regression.rs  touch_point_filter.rs  (+1 more)
src-tauri/src/commands/laboratories/: commands.rs  mod.rs  types.rs
src-tauri/src/commands/licensing/: crypto.rs  crypto_tests.rs  demo.rs  features.rs  hardware.rs  hardware_tests.rs  licensing_tests.rs  mod.rs  online.rs  security.rs  types.rs
src-tauri/src/commands/licensing/engine/: engine_tests.rs  mod.rs  offline.rs  operations.rs  verification.rs
src-tauri/src/commands/licensing/hardware/: cache.rs  collectors.rs  legacy.rs  machine_id.rs  mod.rs
src-tauri/src/commands/operators/: commands.rs  mod.rs  types.rs
src-tauri/src/commands/parsing/: ai_mapper.rs  commands.rs  helpers.rs  mod.rs  types.rs
src-tauri/src/commands/parsing/commands/: ai.rs  candidate.rs  diagnostics.rs  io.rs  mod.rs
src-tauri/src/commands/reagents/: commands.rs  helpers.rs  mod.rs  seed_data.rs  types.rs
src-tauri/src/commands/series/: mod.rs
src-tauri/src/db/: columnar.rs  migration.rs  migration_tests.rs  mod.rs  pool.rs  touch_point_precompute.rs
src-tauri/src/db/migrations/: error.rs  mod.rs  trait.rs  v0001_initial.rs  v0002_touch_point_metrics.rs  v0003_multi_threshold_touch_point.rs  v0004_experiment_list_default_index.rs  v0005_reagent_and_testtype_indexes.rs  v0006_artifact_import_batch_indexes.rs  v0007_fk_indexes.rs  v0008_analysis_artifact.rs  v0009_experiment_list_projection.rs  v0010_experiment_rheology_parameters.rs
src-tauri/src/db/repositories/: analysis_artifacts.rs  experiment_projection.rs  experiments.rs  mod.rs  reagents.rs  reagents_tests.rs
src-tauri/src/db/repositories/experiments/: delete.rs  mod.rs  read.rs  write.rs
src-tauri/src/db/touch_point_precompute/: backfill.rs  compute.rs  inputs.rs  mod.rs  tests.rs  types.rs  writer.rs
src-tauri/src/reports/: mod.rs
src-tauri/src/reports/application/: comparison.rs  generate_by_ids.rs  generate_single.rs  mod.rs
src-tauri/src/reports/domain/: mod.rs  options.rs  types.rs
src-tauri/src/reports/render/: excel.rs  mod.rs  pdf.rs  typst.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/runtime/jobs/: metrics.rs  mod.rs  scheduler.rs  types.rs
src-tauri/src/startup/: commands_registry.rs  crash_reporter.rs  logging.rs  mod.rs  setup.rs
src-tauri/src/state/: app_state.rs  mod.rs
src-tauri/src/utils/: mod.rs  paths.rs  time.rs  validation.rs
src-tauri/tests/: ai_parsing.rs  db_integrity.rs  ipc_contracts.rs
src/rust/rheolab-core/: Cargo.toml
src/rust/rheolab-core/.cargo/: config.toml
src/rust/rheolab-core/benches/: rheology_core.rs
src/rust/rheolab-core/examples/: excel_comparison_debug.rs  gen_pdf.rs  pdf_comparison_debug.rs  verify_individual_axes.rs
src/rust/rheolab-core/src/: detectors.rs  grace.rs  lib.rs  parasitic_filter.rs  physics.rs  processor.rs  schedule_detector.rs  types.rs  utils.rs
src/rust/rheolab-core/src/analysis/: hydration.rs  mod.rs
src/rust/rheolab-core/src/detectors/: anchor.rs  classify.rs  mixing.rs  mod.rs  repeating.rs  sst.rs  tests.rs
src/rust/rheolab-core/src/parser/: ai_mapper.rs  calibration.rs  date_detector.rs  filename_parser.rs  geometry_verifier.rs  header_detector.rs  instrument_detector.rs  mod.rs  physics_engine.rs  rheo_parser.rs  row_mapper.rs  text_encoding.rs  types.rs  validator.rs
src/rust/rheolab-core/src/report_generator/: chart_generator.rs  excel.rs  formatters.rs  mod.rs  pdf.rs  touch_point.rs  translations.rs  types.rs  typst_renderer.rs
src/rust/rheolab-core/tests/: axis_mode_test.rs  bsl_pipeline_test.rs  gold_standard_test.rs  golden_tests.rs  instrument_rheology_gold_test.rs  pdf_complex_svg_test.rs  pdf_from_csv_test.rs  pdf_generation_test.rs  report_regression_test.rs  touch_point_fixture_parity.rs
src/rust/rheolab-core/tests/fixtures/: brookfield_steps.json  bsl_steps.json  chandler_steps.json  grace_steps.json  ofite_1100_steps.json  sst_mamontovskoe_steps.json  swb_mamontovskoe_steps.json
tools/fixture_seed/: Cargo.toml
tools/fixture_seed/src/: main.rs
(+1196 files in other folders)
