[package]
name = "fixture-seed"
version = "0.1.0"
edition = "2021"
description = "Заполнение БД результатами из реальных тестовых фикстур (200 копий каждого файла)"

[dependencies]
rheolab-core = { path = "../../src/rust/rheolab-core", default-features = false }

rusqlite  = { version = "0.31", features = ["bundled"] }
zstd      = "0.13"
byteorder = "1"
uuid      = { version = "1", features = ["v4"] }
rand      = "0.8"
chrono    = "0.4"
serde_json = "1"
