[package]
name = "rheolab-core"
version = "0.1.0"
edition = "2021"
authors = ["RheoLab Team"]
description = "Rheological calculation engine for RheoLab Enterprise (native Rust via Tauri IPC)"

[lib]
crate-type = ["rlib"]

[features]
default = ["full"]
# Full build includes PDF generation via typst
full = ["pdf", "excel", "charts"]
# PDF generation via typst
pdf = ["dep:typst", "dep:typst-pdf", "dep:typst-utils"]
# Excel generation via rust_xlsxwriter
excel = ["dep:rust_xlsxwriter"]
# Native chart generation via plotters
charts = ["dep:plotters"]
# Minimal build for parsing and calculations only
minimal = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Phase 4: Parsers
calamine = { version = "0.22.1", features = ["dates"] }
csv = "1.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
regex = "1.10"

# Phase 6: Report Generation - Excel (optional)
rust_xlsxwriter = { version = "0.80", default-features = false, features = ["serde"], optional = true }

# Typst Report Engine - PDF (optional)
typst = { version = "0.12", optional = true }
typst-pdf = { version = "0.12", optional = true }
typst-utils = { version = "0.12", optional = true }
time = "0.3"
base64 = "0.22"

# Native Chart Generation (optional)
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "ttf"], optional = true }

[dev-dependencies]

[profile.release]
opt-level = "s"
lto = true
